2011-06-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Reintegrate branch service_versions onto trunk
	* [TASK] #27610: Add scheduler task skeleton to clean up deprecated cache entries
	* [TASK] Remove deprecated methods and configuration options
	* [FEATURE][!!!] #27496: Take advantage of WS method GetServiceVersions
	* [TASK][!!!] #27570: Breaking change in web service 2.0
	* [TASK][!!!] #27570: Update web service end-point

2011-06-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.3.0
	* [FEATURE] #27466: Add a link to download the vCard of the office
	* [BUGFIX] #27616: Kanton Bern - Confederation services don't show

2011-06-20  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #27577: Add hook to allow manual ordering of the providers
	* [TASK] Set minimum TYPO3 requirement to 4.4.0
	* [TASK] #27580: Update translations
	* [BUGFIX][DOC] #27565: Link to Forge is broken

2011-06-19  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #27469: Pi2: Group links by level
	* [BUGFIX] #27542: Single legal regulation block breaks the output

2011-06-15  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #27468: Local override of template within pi1 does not work
	* [TASK] #27465: Remove hardcoded texts
	* [TASK] #27351: Change default order of parameters for the parameterized URL
	* [TASK] #27467: Invert office and department
	* [TASK] #27396: Follow-up to keep most of the old DIV/SPAN classes
	* [TASK] Update l10n API calls for TYPO3 4.6.0

2011-06-13  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add RELEASE_NOTES to upgrade from egovapi 1.2 to 1.3
	* [TASK][!!!] #27396 Add markup for microformat in office address

2011-06-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #27380: Do not include community parameter in generated URL

2011-06-11  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #27373: Remove duplicate services
	* [BUGFIX] #27374: Constant Editor crashes with NULL pointer exception
